:hammer: finished most of assignment 1; code reformatting